# PromptCraft

./: .aiignore  .coveragerc  .env.dev  .env.prod  .env.staging  .env.template  .gitattributes  .gitguardian-resolution.md  .gitguardian.yml  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .mcp.json  .mcp.json.backup  .mutmut_config  .npmrc  .pre-commit-config.yaml  .remarkrc.yaml  .safety-project.ini  .semgrep.yml  .semgrepignore  .snyk  .tmp-auth-issues-revision.md  .tmp-auth-streamlining-analysis-20250827.md  .tmp-auth-streamlining-proposal-20250827.md  .tmp-auth4-15-failures-resolution-20250827.md  .tmp-auth4-emergency-remediation-20250826.md  .tmp-auth4-final-completion-summary-20250826.md  .tmp-auth4-final-remediation-report-20250826.md  .tmp-auth4-final-validation-summary-20250827.md  .tmp-auth4-phase-validation-20250825.md  .tmp-auth4-priority5-completion-report.md  .tmp-auth4-priority6-completion-report.md  .tmp-auth4-refactoring-progress-20250826.md  .tmp-auth4-router-test-fixes-20250827.md  .tmp-auth4-test-coverage-analysis-20250827.md  .tmp-auth4-test-failures-analysis-20250828.md  .tmp-auth4-ultimate-completion-summary-20250826.md  .tmp-auth4-utc-compatibility-20250826.md  (+155 more)
.agents/: discovery-config.yaml
.agents/context/: c-r-e-a-t-e-framework.md  shared-architecture.md
.agents/core/: ai-engineer.yaml  code-reviewer.yaml
.agents/project/: journey-orchestrator.yaml
.claude/: README.md  settings.json  settings.local.json.backup
.claude/commands/: _README.md  creation-agent-skeleton.md  creation-knowledge-file.md  creation-planning-doc.md  function-loading-control.md  list-assumptions.md  meta-command-help.md  meta-fix-links.md  meta-list-commands.md  migration-knowledge-file.md  migration-legacy-knowledge.md  migration-qdrant-schema.md  notification.md  quality-format-code.md  quality-frontmatter-validate.md  quality-lint-check.md  quality-lint-document.md  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: config.json
.github/: CI_TEST.md  PULL_REQUEST_TEMPLATE.md  copilot.yml  dependabot.yml  security-exceptions.yml
.mcp/: discovery-config.yaml
.openai/: config.json
.qwen/: config.json
.serena/: project.yml
alembic/: env.py
audit_logs/: audit_20250830.jsonl
config/: dast-config.yaml  default.yaml  integrations_config.json  monitoring_config.yaml  openrouter_models.yaml  security_config.yaml  test_patterns.yaml  testing-schedule.json
deployment/: README.md  main.bicep  parameters.dev.json  parameters.prod.json
docs/: AUTH-4-HOMELAB-PERFORMANCE-VALIDATION.md  CHANGELOG.md  DYNAMIC_FUNCTION_LOADING_PROTOTYPE.md  HYBRID_INFRASTRUCTURE_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  agent-qwen-test-engineer.md  agent-test-engineering.md  agent-tool-loading-architecture.md  agent_extension_guidelines.md  agent_registration_best_practices.md  ai-tools-integration.md  api-reference.md  codecov-integration.md  configuration-system-guide.md  conservative_fallback_system.md  context7-package-reference.md  context7-quick-reference.json  coverage-automation-integration.md  current-linting-status.md  deployment-strategy.md  fast-coverage-workflow.md  function-loading-user-control-system.md  hybrid-mcp-implementation-plan.md  index.md  mcp-client-usage.md  mcp-server-inventory.md  migration-guide.md  mock-standardization-report.md  mypy-ci-alignment.md  phase-1-issue-NEW-9-completion-summary.md  security-best-practices.md  style_guide.md  task-detection-algorithm.md  test-configuration.md  test-isolation-guidelines.md  usage-guide.md  user-tier-system.md  vector-store-integration-guide.md  vscode-coverage-integration-summary.md  vscode-coverage-integration.md  (+2 more)
examples/: README.md  __init__.py  config_demo.py  encryption_usage.py  fallback_system_demo.py  health_check_demo.py  openrouter_client_demo.py  task_detection_integration.py  vector_store_usage.py
htmlcov-by-type/: index.html  test.html
knowledge/: 00_quick-reference.md  01_context-blocks.md  02_request-blocks.md  03_examples-gallery.md  04_framework-library.md  05_evidence-and-citations.md  06_tone-and-format.md  07_evaluation-toolkit.md  08_templates-and-basemodes.md  09_glossary-and-faq.md  10_few-shot-gallery.md  11_Python-Guide.md  instruction_script  qwen_test_engineer.md  test_engineering.md
lint_env/: pyvenv.cfg
migrations/: 002_add_auth3_rbac.py  20250125_add_security_monitor_tables.py  20250126_add_security_events_table.py  20250126_alter_security_events_for_logger.py  __init__.py  auth3_functions.sql
modules/: privateDnsZone.bicep  privateEndpoint.bicep  vnet.bicep
playwright-report/: index.html
pytest_plugins/: __init__.py  coverage_hook_plugin.py
scripts/: __init__.py  ai_tools_validator.py  auto_coverage_report.py  auto_update_coverage.py  check_deps.py  claude-context7-integration.py  claude_context7_integration.py  clean_emoji_navigation.py  cleanup_coverage_files.py  cleanup_datetime_migration.py  cleanup_navigation_duplicates.py  configure-branch-protection.sh  context7-helper.py  context7_helper.py  coverage-report  coverage-system-README.md  coverage_data_loader.py  coverage_file_watcher.py  debug_routing.py  deploy-hybrid.sh  dynamic_loading_cli.py  enhanced_coverage_loader.py  enhanced_path_coverage_analyzer.py  fast_coverage_workflow.py  fix_coverage_reports.py  fix_mkdocs_references.py  generate_coverage_by_test_type.sh  generate_requirements.sh  generate_test_coverage_fast.py  generate_test_type_coverage.py  generate_test_type_coverage_clean.py  homelab_connection_pool_analysis.py  homelab_migration_analysis.py  homelab_performance_validation.py  html_renderer.py  inject_navigation_links.py  launch_admin.py  migrate_datetime_usage.py  migrate_security_events_to_postgres.py  migrate_security_monitor.py  (+34 more)
src/: main.py  main_core.py
temp_cleanup/: .keep  README.md  test_remediation_fixes.py  test_vscode_integration.py
test-results/: results.json
testing/: .mcp.json
tests/: conftest.py  conftest_backup.py  test_dependency_reconciliation.py
tmp_cleanup/: .tmp-lint-resolution-final-20250113.md  .tmp-lint-resolution-progress-20250113.md
(+806 files in other folders)
